--- a/deno.json
+++ b/deno.json
@@ -3,7 +3,7 @@
     "hono": "jsr:@hono/hono@^4.7.11"
   },
   "tasks": {
-    "start": "deno run --allow-net main.ts"
+    "start": "deno run --allow-net main.tsx"
   },
   "compilerOptions": {
     "jsx": "precompile",
